fixed nav bar icons not showing on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -305,7 +305,7 @@ main {
 }
 
 .header {
-  width: 1405px;
+  max-width: 1405px;
   margin: 0 auto;
 }
 
